# rubber_cone_mission

./: CMakeLists.txt  package.xml
msg/: BoundingBox.msg  ProjectedBoundingBox.msg  ProjectedBoundingBoxArray.msg
src/: centroid_pup_color.py  command_publisher.py  hsv_check.py  lidar_bb_publisher.py  lidar_to_camera.py  sensor_sync.py  waypoint_interpolation.py  waypoint_publisher.py
