<?xml version="1.0"?>
<package format="2">
  <name>rubber_cone_mission</name>
  <version>0.0.0</version>
  <description>The rubber_cone_mission package</description>

  <maintainer email="minchang@todo.todo">minchang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>         <!-- 추가 -->
  <build_depend>visualization_msgs</build_depend><!-- 추가 -->
  <build_depend>erp_driver</build_depend>    
  <build_depend>message_generation</build_depend>    <!-- 추가 -->

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>         <!-- 추가 -->
  <build_export_depend>visualization_msgs</build_export_depend><!-- 추가 -->
  <build_export_depend>erp_driver</build_export_depend>        <!-- 추가 -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>          <!-- 추가 -->
  <exec_depend>visualization_msgs</exec_depend> <!-- 추가 -->
  <exec_depend>erp_driver</exec_depend> 
  <exec_depend>message_runtime</exec_depend>        <!-- 추가 -->

  <export>
  </export>
</package>
